color, opacity, stroke inputs + hide layers button

--- a/client/src/assets/index.css
+++ b/client/src/assets/index.css
@@ -19,4 +19,7 @@ html, body {
   overflow: hidden;
 }
 
+.bottom-transparent {
+  background: linear-gradient(to top, transparent 20%, #d4d4d4 21%);
+}
 
