--- a/client/src/assets/index.css
+++ b/client/src/assets/index.css
@@ -17,9 +17,24 @@ html, body {
   height: 100%;
   margin: 0;
   overflow: hidden;
+  overscroll-behavior-x: none;
+}
+
+.w-0\.25 {
+  width: 1px;
 }
 
 .bottom-transparent {
   background: linear-gradient(to top, transparent 20%, #d4d4d4 21%);
+}
+
+.cubic-background {
+  background:
+      linear-gradient(45deg, #ccc 25%, transparent 25%),
+      linear-gradient(-45deg, #ccc 25%, transparent 25%),
+      linear-gradient(45deg, transparent 75%, #ccc 75%),
+      linear-gradient(-45deg, transparent 75%, #ccc 75%);
+  background-size: 20px 20px;
+  background-position: 0 0, 0 10px, 10px -10px, -10px 0;
 }
 
