--- a/client/src/assets/index.css
+++ b/client/src/assets/index.css
@@ -38,3 +38,25 @@ html, body {
   background-position: 0 0, 0 10px, 10px -10px, -10px 0;
 }
 
+
+input[type=range].range-slider::-webkit-slider-thumb {
+  pointer-events: auto;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  -webkit-appearance: none;
+  background-color: #bdbdbd;
+  box-shadow: 0 1px 8px 0 #16171833,0 2px 3px -1px #16171833
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0; /* Some browsers add a margin by default */
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
